Bug 143709 - Part of the text remains visible when press CTRL+A Backspace within an Calc cell (gen)
Summary: Part of the text remains visible when press CTRL+A Backspace within an Calc c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.2 rc
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.4.0 target:7.3.2
Keywords: bibisected, bisected, regression
: 144358 146846 148056 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-03 18:18 UTC by Telesto
Modified: 2022-03-17 17:04 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (7.93 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-08-03 18:18 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-08-03 18:18:42 UTC
Description:
Part of the text remains visible when press CTRL+A Backspace within an Calc cell

Steps to Reproduce:
1. Open the attached file
2. Enter cell E7 (by double click
3. CTRL+A
4. Backspace

Actual Results:
"Ons' remains visible

Expected Results:
Nothing remains


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2a151d1d5bc055d5e0011460b6ec42ea9f34f880
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: threaded

and in
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 066599203ce143b3614e0fa298a05ed28ba2ca63
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

not in
7.1
Comment 1 Telesto 2021-08-03 18:18:57 UTC
Created attachment 174054 [details]
Example file
Comment 2 Dmitrii A 2021-08-04 02:16:59 UTC
confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ac80ec817eb07c77a51bc0729985a473c734182e
CPU threads: 16; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

'Ons' remains visible but when you quit from editing cell in remains empty.
Comment 3 raal 2021-08-04 14:47:51 UTC
This seems to have begun at the below commit.
Adding Cc: to  Mike Kaganski ; Could you possibly take a look at this one?
Thanks
 9e32fc1ef5cc59773526f1f9e7cb09405c32999f is the first bad commit
commit 9e32fc1ef5cc59773526f1f9e7cb09405c32999f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jun 8 15:35:13 2021 +0200

    source d0a1616ccad0dd5f5a02c1b0204f537b57d0b4b5

https://git.libreoffice.org/core/+/d0a1616ccad0dd5f5a02c1b0204f537b57d0b4b5
     editengine-columns: Implement layout
Comment 4 Buovjaga 2021-09-08 07:11:01 UTC
*** Bug 144358 has been marked as a duplicate of this bug. ***
Comment 5 Buovjaga 2022-01-20 14:41:32 UTC
*** Bug 146846 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2022-01-20 14:56:58 UTC
Not reproducible in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: bd5492275d31f59b1d269205018d1487af52426f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 7 Xisco Faulí 2022-01-20 14:57:41 UTC
but I do reproduce it with GEN

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: bd5492275d31f59b1d269205018d1487af52426f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2022-02-15 11:28:10 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c00544d672f0fc0f08c12f5fd9cd53fdbe96733

tdf#143709 - Create repaint rectangle with the old text size

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Andreas Heinisch 2022-02-15 11:32:28 UTC
I don't know how to add an automated test to prevent any further regressions, since it is only a visual artifact of the repaint area. If I try to access the text in a cell, it returns an empty text, since it already has been deleted.

Maybe Xisco knows a solution?
Comment 10 Mike Kaganski 2022-02-15 13:31:41 UTC
(In reply to Andreas Heinisch from comment #9)

This is the kind of bugs that don't have unit tests. Testing it would involve taking screenshot in the process of editing the cell, and trying to compare specific part of it with some expected image (taking into account differences possibly introduced by screen scaling, graphic backend, anti-aliasing, possible changes in grid color and cursor shape (and its blinking phase), having Venus in the second house and its relation to the Moon, and so on...)
Comment 11 Commit Notification 2022-02-15 16:36:27 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/01d9b58f29a4ab2734ad8f882798b5fc0c9d3570

tdf#143709 - Create repaint rectangle with the old text size

It will be available in 7.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Mike Kaganski 2022-03-17 17:04:23 UTC
*** Bug 148056 has been marked as a duplicate of this bug. ***