tdf#143709 - Create repaint rectangle with the old text size

Otherwise, the repaint rectangle uses the new text size, which may lead
to visual artifacts, if the old text size exceeds the new one.

Change-Id: I9b49755bf6b8c453e319e2a4081d58bf2e433cd9